lambdacube-dsl/tests/accept/gfx00.lc
module Simple where

frame = FrameBuffer (colorImage1 (V4F 0.0 0.0 0.4 1.0))
main = ScreenOut frame
