lambdacube-dsl/tests/reject/nameclash01.lc
main =
    let FrameBuffer = FrameBuffer (colorImage1 1.0)
    in ScreenOut FrameBuffer
